--- a/src/main/webapp/static/min/css/home/index_v4.css
+++ b/src/main/webapp/static/min/css/home/index_v4.css
@@ -997,14 +997,14 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .quick_sprite .sjb_bg .dgsp_left_one .team{display:inline-block; vertical-align:middle;}
 .quick_sprite .sjb_bg .dgsp_left_one .left_time{position:absolute;top:3px;left:20px;font-size:12px;color:#666;}
 .quick_sprite .sjb_bg .dgsp_left_one .team span{display:inline-block;height:34px; vertical-align:middle;font-weight:bold;font-size:18px;}
-.quick_sprite .sjb_bg .dgsp_left_one .team i{display:inline-block;width:17px;height:12px;margin:5px 5px 0 5px;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat -110px -160px;vertical-align:middle;}
+.quick_sprite .sjb_bg .dgsp_left_one .team i{display:inline-block;width:17px;height:12px;margin:5px 5px 0 5px;background:url(../../img/sprite-v4.png) no-repeat -110px -160px;vertical-align:middle;}
 .quick_sprite .sjb_bg .dgsp_left_tt{}
 .quick_sprite .sjb_bg .dgsp_left_tt ul{*zoom:1;}
 .quick_sprite .sjb_bg .dgsp_left_tt ul:after{content:'\0020';display:block;height:0;line-height:0;font-size:0;clear:both;visibility:hidden;}
 .quick_sprite .sjb_bg .dgsp_left_tt li{ height:52px; float:left; margin-bottom:5px; display:block; }
 .quick_sprite .sjb_bg .li_title{ width:160px; height:58px; float:left; ; font-size:18px; font-weight:bold; text-align:center; line-height:58px; color:#FFF;}
 .quick_sprite .sjb_bg .dgsp_left_tt li a,
-.quick_sprite .sjb_bg .dgsp_left_tt li a:visited{float:left;display:block;width:100px;height:42px;line-height:42px;margin:8px 4px 0 0;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat 0 -160px;color:#333;font-size:16px;text-align:center;}
+.quick_sprite .sjb_bg .dgsp_left_tt li a:visited{float:left;display:block;width:100px;height:42px;line-height:42px;margin:8px 4px 0 0;background:url(../../img/sprite-v4.png) no-repeat 0 -160px;color:#333;font-size:16px;text-align:center;}
 .quick_sprite .sjb_bg .dgsp_left_tt li a:hover{background-position:0 -210px;}
 .quick_sprite .sjb_bg .dgsp_left_tt li a.current{background-position:0 -260px;}
 .quick_sprite .sjb_bg .dgsp_left_tt li a.ban{background-position:0 -310px;color:#999;cursor:default;}
@@ -1084,7 +1084,7 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .quickbuybox .lotbox{position:relative;overflow:hidden;height:125px;padding:0 0 0 105px;}
 .quickbuybox .lotbox .loticon{position:absolute;top:20px;left:17px;}
 .quickbuybox .lotbox .loticon .licon,
-.quickbuybox .lotbox .loticon .licon:visited{overflow:hidden;display:block;width:70px;height:70px;line-height:300px;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat -430px 0;}
+.quickbuybox .lotbox .loticon .licon:visited{overflow:hidden;display:block;width:70px;height:70px;line-height:300px;background:url(../../img/sprite-v4.png) no-repeat -430px 0;}
 .quickbuybox .lotbox .loticon .status{display:block;margin-top:5px;text-align:center;font-family:Microsoft Yahei,Simsun;font-size:14px;color:#e4393c;}
 .quickbuybox .lotbox .lotinfo{margin-bottom:5px;font-family:Microsoft Yahei,Simsun;font-size:14px;}
 .quickbuybox .lotbox .lotinfo .base{margin-top:15px;}
@@ -1097,7 +1097,7 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .quickbuybox .lotbox .lotball .free{position:absolute;left:200px;top:-20px;display:inline-block;padding:0 5px;background:#e4393c;color:#fff;font-size:12px;}
 .quickbuybox .lotbox .lotball ul{*zoom:1;margin-top:8px;}
 .quickbuybox .lotbox .lotball ul:after{content:'\0020';display:block;height:0;line-height:0;font-size:0;clear:both;visibility:hidden;}
-.quickbuybox .lotbox .lotball ul li{float:left;*display:inline;*zoom:1;width:30px;height:30px;margin-right:5px;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat;text-align:center;}
+.quickbuybox .lotbox .lotball ul li{float:left;*display:inline;*zoom:1;width:30px;height:30px;margin-right:5px;background:url(../../img/sprite-v4.png) no-repeat;text-align:center;}
 .quickbuybox .lotbox .lotball ul li.ball_red{background-position:-370px 0;}
 .quickbuybox .lotbox .lotball ul li.ball_blue{background-position:-400px 0;}
 .quickbuybox .lotbox .lotball ul li input{width:30px;height:26px;line-height:26px;margin-top:3px;text-align:center;border:none;background:none;font-family:Arial,Simsun;font-weight:bold;font-size:15px;color:#333;}
@@ -1359,8 +1359,8 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .pushlottery .pushlot .pushbox .h_r{width:147px;}
 .pushlottery .pushlot .pushbox .h_l .lot_icon{display:inline-block;width:70px;height:70px;margin-top:6px;}
 .pushlottery .pushlot .pushbox .h_l .lot_icon .lot{display:block;width:100%;height:100%;background:#090;}
-.pushlottery .pushlot .push_k3 .h_l .lot_icon .lot{background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat -430px -70px;}
-.pushlottery .pushlot .push_11x5 .h_l .lot_icon .lot{background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat -430px -140px;}
+.pushlottery .pushlot .push_k3 .h_l .lot_icon .lot{background:url(../../img/sprite-v4.png) no-repeat -430px -70px;}
+.pushlottery .pushlot .push_11x5 .h_l .lot_icon .lot{background:url(../../img/sprite-v4.png) no-repeat -430px -140px;}
 .pushlottery .pushlot .pushbox .h_l .time_info{overflow:hidden;display:inline-block;width:60px;height:36px;line-height:18px;margin-top:6px;border:#e6e6e6 2px solid;border-radius:2px;background:#ebebeb;text-align:center;color:#999;}
 .pushlottery .pushlot .pushbox .h_l .time_info .label{font-weight:normal;font-size:12px;}
 .pushlottery .pushlot .pushbox .h_r .game_tit{overflow:hidden;height:18px;line-height:18px;margin-top:10px;font-family:Microsoft Yahei,Simsun;font-size:15px;}
@@ -1397,7 +1397,7 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .pushlottery .pushlot .push_dgtz .against ul:after{content:'\0020';display:block;height:0;line-height:0;font-size:0;clear:both;visibility:hidden;}
 .pushlottery .pushlot .push_dgtz .against ul li{float:left;background:#fff;}
 .pushlottery .pushlot .push_dgtz .against ul li a,
-.pushlottery .pushlot .push_dgtz .against ul li a:visited{overflow:hidden;display:block;width:75px;height:38px;line-height:18px;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat 0 -80px;text-align:center;color:#333;}
+.pushlottery .pushlot .push_dgtz .against ul li a:visited{overflow:hidden;display:block;width:75px;height:38px;line-height:18px;background:url(../../img/sprite-v4.png) no-repeat 0 -80px;text-align:center;color:#333;}
 .pushlottery .pushlot .push_dgtz .against ul li a.select{background-position:0 -120px;}
 .pushlottery .pushlot .push_dgtz .against ul li .t{display:block;margin-top:2px;font-family:Microsoft Yahei,Simsun;font-size:14px;font-weight:bold;}
 .pushlottery .pushlot .push_dgtz .against ul li .sp{color:#999;line-height:14px;}
@@ -1423,7 +1423,7 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .pushlottery .pushlot .push_dgtzsp .against ul:after{content:'\0020';display:block;height:0;line-height:0;font-size:0;clear:both;visibility:hidden;}
 .pushlottery .pushlot .push_dgtzsp .against ul li{float:left;background:#fff;}
 .pushlottery .pushlot .push_dgtzsp .against ul li a,
-.pushlottery .pushlot .push_dgtzsp .against ul li a:visited{overflow:hidden;display:block;width:75px;height:38px;line-height:18px;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat 0 -80px;text-align:center;color:#333;}
+.pushlottery .pushlot .push_dgtzsp .against ul li a:visited{overflow:hidden;display:block;width:75px;height:38px;line-height:18px;background:url(../../img/sprite-v4.png) no-repeat 0 -80px;text-align:center;color:#333;}
 .pushlottery .pushlot .push_dgtzsp .against ul li a.select{background-position:0 -120px;}
 .pushlottery .pushlot .push_dgtzsp .against ul li .t{display:block;margin-top:2px;font-family:Microsoft Yahei,Simsun;font-size:14px;font-weight:bold;}
 .pushlottery .pushlot .push_dgtzsp .against ul li .sp{color:#999;line-height:14px;}
@@ -1513,7 +1513,7 @@ img.lazy {background:url(http://img.cailele.com/img_new/loading.gif) no-repeat c
 .opengift_dialog .explain .subtitle{font-size:16px;color:#666;}
 .opengift_dialog .explain .lotball ul{padding-left:120px;*zoom:1;margin:4px auto;}
 .opengift_dialog .explain .lotball ul:after{content:'\0020';display:block;height:0;line-height:0;font-size:0;clear:both;visibility:hidden;}
-.opengift_dialog .explain .lotball ul li{float:left;*display:inline;*zoom:1;width:30px;height:30px;margin-right:5px;background:url(http://img.cailele.com/img_new/common/sprite-v4.png) no-repeat;text-align:center;}
+.opengift_dialog .explain .lotball ul li{float:left;*display:inline;*zoom:1;width:30px;height:30px;margin-right:5px;background:url(../../img/sprite-v4.png) no-repeat;text-align:center;}
 .opengift_dialog .explain .lotball ul li.ball_red{background-position:-370px 0;}
 .opengift_dialog .explain .lotball ul li.ball_blue{background-position:-400px 0;}
 .opengift_dialog .explain .lotball ul li input{width:30px;height:26px;line-height:26px;margin-top:3px;text-align:center;border:none;background:none;font-family:Arial,Simsun;font-weight:bold;font-size:15px;color:#333;}
